# openAuthenticator

./: README.md  pyproject.toml
src/open_authenticator/: api.py  chacha20.py  init_application.py  kdbx_manager.py  main.py  otp_handler.py
src/open_authenticator/templates/: index.html
src/openauthenticator/: __init__.py  main.py
src/tests/: api_vault_test.py  kdbx_test.py
tests/: test_chacha20.py
