[tool.poetry]
name = "open-authenticator"
version = "0.1.0"
description = "Simple OTP based authentication"
authors = ["Your Name <you@example.com>"]
packages = [{include = "open_authenticator", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110"
uvicorn = "^0.29"
redis = "^5.0"
python-multipart = "^0.0.9"
jinja2 = "^3.1"
dotenv = "^0.9.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
