[tool.poetry]
name = "openauthenticator"
version = "0.1.0"
description = ""
authors = ["Codex <codex@openai.com>"]
packages = [{include = "openauthenticator", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = "^0.34"
pyotp = "^2.9"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
